--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "pdfjs-dist": "^3.7.107",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.1.2",
+    "react-redux": "^8.1.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "redux": "^4.2.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
