chore: ignore update

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,13 @@ node_modules
 dist
 dist-ssr
 *.local
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
+*.env
+*.env.ts
+env.ts
 
 # Editor directories and files
 .vscode/*
