--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-buddy/ide-toolbox": "^2.3.1",
     "@react-buddy/palette-antd": "^5.3.0",
     "antd": "^5.6.3",
+    "axios": "^1.4.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "pdfjs-dist": "^3.7.107",
